# polymarket_weather_trade_bot

./: .dockerignore  .env.example  .gitignore  .venv  CLAUDE.md  Dockerfile  FIX_NOTES.md  config.yaml  deploy.sh  docker-compose.yml  pyproject.toml
data/: backtest_ensemble_spread.json  backtest_results.json
docs/: ARCHITECTURE.md  BUGFIX_2026-04-15.md  CODE_REVIEW.md  FIX_VERIFICATION.md  FOCUSED_ELBAKYAN_PENDING.md  REQUIREMENTS.md  REVIEW_PROCESS.md  RUNBOOK.md  strategy_variants_howto.md
launchd/: com.user.weather-bot.plist.template
nginx/: weather-bot.conf
scripts/: backfill_match_price.py  backfill_redeem_metadata.py  backtest_ensemble_spread.py  backtest_fee_comparison.py  backup_and_reset.sh  clean_ghost_position.py  collect_vps_data.py  collect_weather_data.py  full_reset_and_deploy.sh  hourly_monitor.py  migrate_match_price.py  migrate_old_data.py  migrate_redeem_columns.py  monte_carlo_backtest.py  reconcile_onchain_drift.py  recover_ghost_buys.py  rollback_false_settled.py  run_local.sh  setup_local.sh  verify_redeem_balance.py
src/: alerts.py  config.py  main.py  preflight.py  security.py
tests/: dry_run_offline.py  run_backtest_offline.py  smoke_dry_run.py  test_admin_auth_doc.py  test_alerts.py  test_backtest.py  test_backtest_fee_comparison.py  test_cached_forecasts_stale_clear.py  test_calibrator.py  test_circuit_breaker_helper.py  test_city_local_forecast_indexing.py  test_claude_md_invariants.py  test_clob_client_init.py  test_clob_client_pricing.py  test_clob_probe.py  test_clob_resilience.py  test_clob_rounding_patch.py  test_daily_max_guard.py  test_dashboard_auth.py  test_dashboard_daily_loss_utc.py  test_dashboard_total_realized.py  test_dead_imports.py  test_deploy_scripts.py  test_discovery.py  test_discovery_filters.py  test_discovery_settle_time.py  test_discovery_utc_midnight.py  test_effective_entry_price.py  test_ensemble_forecast.py  test_entry_guards.py  test_evaluator_state_routing.py  test_executor_atomic.py  test_executor_batch_cap.py  test_executor_late_fill.py  test_executor_live.py  test_exit_cooldowns.py  test_fix_validation.py  (+63 more)
(+92 files in other folders)
